fixed moso color issues and hero image not showing

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -22,6 +22,7 @@
 
   --color-calvarycomposite: #577aba;
   --color-dasso: #899f3e;
+  --color-moso: #4ca829;
 }
 
 @layer components {
